Updated the CRUD for Subreddits, added total votes and fixed the routes for users that are not loggedin

--- a/views/posts/new-post.hbs
+++ b/views/posts/new-post.hbs
@@ -2,6 +2,7 @@
 
 <form action="/post/create" method="post" enctype="multipart/form-data">
 
+{{#if allSubreddits}}
     <label>Select Subredddit:
         <select name="subreddit">
             {{#each allSubreddits}}
@@ -9,7 +10,7 @@
             {{/each}}
         </select>
     </label>
-
+{{/if}}
 
 
     <div class="form-group">
