--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -34,7 +34,7 @@
 
     <div>
 
-      <a href="/auth/profile/{{userInSession._id}}/message">Send message</a>
+      <a href="/inbox/{{userInSession._id}}">Send message</a>
     </div>
 
   </div>
