--- a/views/users/create-message.hbs
+++ b/views/users/create-message.hbs
@@ -1,8 +1,7 @@
-<h2>Send message</h2>
+<h2>Send message to {{id}}</h2>
 
 <form action="/users/send-message" method="POST">
-  <label for="recipient">Recipient</label>
-  <input type="text" name="recipient" id="recipient" />
+
   <label for="message">Message</label>
   <textarea name="message" id="message" cols="30" rows="10"></textarea>
   <input type="submit" value="Send" />
