--- a/views/users/message-form.hbs
+++ b/views/users/message-form.hbs
@@ -1,6 +1,6 @@
 <h2>Send message to {{id}}</h2>
 
-<form action="/users/send-message" method="POST">
+<form action="/inbox/sendmsg/{{id}}" method="POST">
 
   <label for="message">Message</label>
   <textarea name="message" id="message" cols="30" rows="10"></textarea>
