--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -111,16 +111,14 @@
             <a href="subreddit/{{_id}}">{{name}}</a>
 
 
-            {{#if isCommentAuthor}}
+            {{#equal author._id ../userDetails._id}}
             <button><a href="/subreddit/comment/{{_id}}/edit">Edit</a></button>
-
-
-            <form action="/subreddit/comment/{{_id}}/delete" method="post">
+               <form action="/subreddit/comment/{{_id}}/delete" method="post">
                <input type="hidden" name="sid" value="{{originalPost.subreddit}}">
                <input type="hidden" name="pid" value="{{originalPost._id}}">
                <button>Delete</button>
             </form>
-            {{/if}}
+            {{/equal}}
 
          </div>
 
