--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,13 +12,18 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+</style>
+
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="/images/logo.png"alt="Logo"width="100"height="50" class="d-inline-block align-text-top"/> </a>
+          <img src="https://res.cloudinary.com/dm6a8aocc/image/upload/v1673520510/mingle/mingleicon_on8eou.png"
+  alt="Logo" width="50"height="50" class="d-inline-block align-text-top"/> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
