--- a/views/users/inbox.hbs
+++ b/views/users/inbox.hbs
@@ -1,13 +1,15 @@
 <h1>Inbox</h1>
-{{messages}}
+{{chats}}
 
 {{! for each memmebr of array render property name as h2 }}
 
-{{#each messages}}
+{{#each chats}}
   <div class="card" style="width: 18rem; margin:1rem; ">
     <div class="card-body">
-      <h5 class="card-title"> <a href="inbox/chatwith/{{this.with._id}}">{{this.with.username}}</a></h5>
-      <img src="{{this.with.profilePicture}}" alt="avatar" style="width: 50px; height: 50px; border-radius: 50%;" />
+      <p>{{this.otherUser}}</p>
+      <p>{{this._doc.text}}</p>
+      <h5 class="card-title"> <a href="inbox/chatwith/{{this.otherUser_id}}">{{this.otherUser.username}}</a></h5>
+      <img src="{{this.otherUser.profilePicture}}" alt="avatar" style="width: 50px; height: 50px; border-radius: 50%;" />
     </div>
 
   </div>
