Changed the user profile page

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{{appTitle}}</title>
+    <title>Mingle</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,13 +12,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+</style>
+
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="/images/logo.png"alt="Logo"width="100"height="50" class="d-inline-block align-text-top"/> </a>
+          <img src="https://res.cloudinary.com/dm6a8aocc/image/upload/v1673520510/mingle/mingleicon_on8eou.png"alt="Logo"width="50"height="45" class="d-inline-block align-text-top"/> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
