--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato';
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00b7ff;
 }
 
 h1 {
@@ -21,9 +23,91 @@ h1 {
   margin-left: 10px;
   margin-top: 5px;
 
-  
 }
 #header-index{
   display: flex;
   justify-content: center;
+}
+
+.card {
+  width: 350px;
+  background-color: #efefef;
+  border: none;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+
+.name {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+
+
+.idd {
+  font-size: 14px;
+  font-weight: 600
+}
+
+.idd1 {
+  font-size: 12px
+}
+
+.number {
+  font-size: 22px;
+  font-weight: bold
+}
+
+.follow {
+  font-size: 12px;
+  font-weight: 500;
+  color: #444444
+}
+
+.btn1 {
+  height: 40px;
+  width: 150px;
+  border: none;
+  background-color: #000;
+  color: #aeaeae;
+  font-size: 15px
+}
+
+.text span {
+  font-size: 13px;
+  color: #545454;
+  font-weight: 500
+}
+
+.icons i {
+  font-size: 19px
+}
+
+hr .new1 {
+  border: 1px solid
+}
+
+.join {
+  font-size: 14px;
+  color: #a0a0a0;
+  font-weight: bold
+}
+
+.date {
+  background-color: #ccc;
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+.title{
+  padding: 1vh;
+  
+}
+
+.text mt-3{
+  font-size: 20px;
 }
