--- a/views/subreddit/list.hbs
+++ b/views/subreddit/list.hbs
@@ -34,7 +34,7 @@
 
 <br />
 
-{{!-- {{#unless !filteredSubreddits}} --}}
+{{!-- {{#if !filteredSubreddits}} --}}
 <section class="subreddit-summary">
   <div class="container-fluid">
     <div class="row">
@@ -52,6 +52,7 @@
     </div>
   </div>
   </section>
+
   {{!-- {{/if}} --}}
 
 <div class="text-center">
