--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -126,3 +126,59 @@ input {
   background-color: #eee;
   gap: calc(10px + 1vw);
 }
+
+
+/**********Sign up page ************/
+
+.signup{
+  margin: 2em 10em 2em 10em;
+
+  padding: 2em 6em 2em 6em;
+  background: rgb(2,0,36);
+background: linear-gradient(117deg, rgb(240, 122, 54) 0%, rgba(236, 107, 107, 0.976) 96%, rgb(235, 102, 41) 98%);
+  color: #ffff;
+ 
+  border-radius: 1.25rem;
+  
+  display: flex;
+  justify-content: center;
+}
+#container_1{
+  text-align:center;
+}
+#container_2{
+ display: flex;
+ flex-direction: column;
+}
+.su-form{
+  width: 100%;
+  height: 2rem;
+  margin-bottom: 1em;
+}
+#su-submit{
+  display: block;
+  width: 50%;
+  margin-left: 10rem;
+  padding: 0.75rem;
+  background: rgb(2,0,36);
+  color: inherit;
+  border-radius: 15px;
+  cursor: pointer;
+
+}
+
+.signup-label{
+  display: flex;
+  flex-direction: column;
+}
+.base-container{
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+/**********Sign up page ************/
+/******** Log In ******************/
+
+
+
