--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,23 +1,37 @@
-<a class="button google" href="/auth/login/profile/google">Log in with Google</a>
 
+<section class="h-100 h-custom" style="background-color: #ec8916;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-lg-8 col-xl-6">
+        <div class="card rounded-3">
+          
+            
+          <div class="card-body p-4 p-md-5">
 
-<div id="login-form">
-  <h2>Log In</h2>
-  <form action="/auth/login" method="POST">
+  
+    
+       <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">Log In </h3>
+   
 
-    <label> Username
-      <input type="text" name="username" placeholder="Your username" />
+  <form class="px-md-2" action="/auth/login" method="POST">
+  <div class="form-outline mb-4">
+     
+      <label class="form-label"> Username
+      <input type="text" id="form3Example1q" class="form-control" name="username" placeholder="Your username" />
     </label>
+  </div>
 
-    <label> Email
-      <input type="email" name="email" placeholder="Your email" />
+   <div class="form-outline mb-4">
+    <label  class="form-label"> Email
+      <input type="email"  class="form-control" name="email" placeholder="Your email"  />
     </label>
-
-    <label> Password
-      <input type="password" name="password" placeholder="Your password" />
+</div>
+ <div class="form-outline mb-4">
+    <label  class="form-label"> Password
+      <input type="password"  class="form-control" name="password" placeholder="Your password" />
     </label>
-
-    <button type="submit">Log In</button>
+</div>
+    <button type="submit" class="btn btn-success btn-lg mb-1">Log In</button>
 
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
@@ -25,3 +39,8 @@
     
   </form>
 </div>
+</div>
+      </div>
+    </div>
+  </div>
+</section>
