--- a/views/subreddit/list.hbs
+++ b/views/subreddit/list.hbs
@@ -5,10 +5,10 @@
 
 
 
-<form class="filter-container" action="/subreddit/list" method="GET">
+<form class="filter-container" action="/subreddit/filter" method="GET">
   <div class="form-group">
     <label for="search">Search</label>
-    <input type="text" class="form-control" id="search" name="search" placeholder="Search">
+    <input type="text" class="form-control" id="search" name="querry" placeholder="Search">
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 
@@ -17,13 +17,14 @@
 
 
 {{#if filteredSubreddits}}
-<button class="btn">Clear Filters </button>
+
+<a href="/subreddit"><button class="btn" type="submit">Clear Filters </button></a>
 
 <section class="subreddit-list">
 
       {{#each filteredSubreddits}}
           <div class="subreddit-list-card" >
-       <a href="subreddit/{{_id}}"></a>
+       <a href="/subreddit/{{_id}}">
       
          <h3 class="card-title"> {{name}}</h3>
               <p class="card-text">{{description}}</p>
