--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -164,6 +164,88 @@ section a {
   gap: calc(10px + 1vw);
 }
 
+.card-top {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-self: flex-start;
+  gap: 10px;
+  cursor: default;
+  margin-top: 10px;
+  border-bottom: 2px solid #ddd;
+  /* background-color: #dedede; */
+}
+
+.card-middle {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: baseline;
+
+  margin: 0;
+  padding: 1rem 0;
+  width: 800px;
+  max-height: 200px;
+  overflow: hidden;
+  cursor: pointer;
+  /* background-color: #dedede; */
+  /* border: 2px solid #ddd; */
+  /* border-radius: 4px; */
+  /* cursor: pointer; */
+}
+
+.card-middle > h3 {
+  margin: 0.4rem 0;
+  font-weight: bold;
+  width: 100%;
+}
+
+.card-middle > p {
+  margin: 0.4rem 0;
+  width: 100%;
+}
+
+.card-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-self: flex-end;
+  gap: 10px;
+  cursor: pointer;
+  margin: 0;
+  border-bottom: 2px solid #ddd;
+
+  /* background-color: #dedede; */
+}
+.card-bottom > img {
+  max-height: 300px;
+  max-width: auto;
+  object-fit: contain;
+}
+
+.arrow {
+  color: #333;
+}
+
+.arrow:hover {
+  color: orange;
+}
+
+.by-user {
+  font-weight: bold;
+}
+
+.by-user:hover {
+  color: var(--primary-color);
+}
+
+@media (max-width: 768px) {
+  .p111111 {
+    display: none;
+  }
+}
+
 /**********Sign up page ************/
 
 .signup {
