--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,6 +99,11 @@ input {
   /* width: 100%; */
 }
 
+.normal-list {
+  display: flex;
+  flex-direction: column;
+}
+
 .post-list-card-wrapper {
   display: flex;
   flex-direction: row;
@@ -186,6 +191,8 @@ section a {
   margin: 0;
   padding: 1rem 0;
   width: 800px;
+
+  width: 50rem;
   max-height: 200px;
   overflow: hidden;
   cursor: pointer;
@@ -293,5 +300,53 @@ section a {
   flex-direction: column;
   justify-content: center;
 }
+.subreddit-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  padding: 20px;
+  background-color: white;
+  border: 4px solid #ddd;
+  max-width: 1200px;
+  /* make div centered */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sd-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+/* ---------post page---------*/
+.form-comment {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  padding: 20px;
+  background-color: white;
+  width: 980px;
+}
+
+.list-group-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: baseline;
+  margin: 10px;
+  padding: 20px;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 980px;
+}
+
 /**********Sign up page ************/
-/******** Log In ******************/
+/******** Log In ******************/ ;
