--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -5,27 +5,25 @@
    </a>
 
 
+<section class="post-list normal-list">
 
-   <div class="container-fluid">
-      <div class="row">
-         <div class="col">
-            <div class="card text-center" style="width:30rem;">
-               <div class="card-body">
-                  <h5 class="card-title">Posted by: <a
-                        href="/auth/profile/{{postDetails.author._id}}">{{postDetails.author.username}}</a></h5> <br>
-                  <p class="card-text">
-                     {{postDetails.text}} <br> <br>
-                     {{#if postDetails.img}}
-                     <img src="{{postDetails.img}}" alt="image" style="width: 300px;">
-                     {{/if}}
-                     <br> <br>
+
+    <div class="post-list-card-wrapper">
+ 
+      {{!-- {{{getVotes upvotes.length downvotes.length this ../userDetails.username }}}  --}}
+
+                   
+                     <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/downvote"
+                        method="post">
+                   
+                     </form>
 
 
   <div class="card-votes">
 
- <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/upvote/thread" method="post">
+ <form action="/subreddit/{{postDetails.subreddit._id}}/post/{{postDetails._id}}/upvote/thread" method="post">
 <button type="submit" class="btn custom-btn btn1-lp" id="go-back-btn" style="background-color:transparent">
-<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="arrow bi bi-arrow-up-short" viewBox="0 0 16 16">
+<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote postDetails.upvotes  postDetails.author._id "orange"}}" class="arrow bi bi-arrow-up-short" viewBox="0 0 16 16">
   <path
     fill-rule="evenodd"
     d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"
@@ -33,69 +31,93 @@
 </svg>
  </button>  </form>
 
-          </div>
-                     <p>upvotes: {{postDetails.upvotes.length}}</p>
-                     <p>downvotes:{{postDetails.downvotes.length}}</p>
-                     <p>Total votes: {{totalVotes}} </p>
-                  </div>
-{{!-- {{checkVote postDetails.upvotes postDetails.downvotes  }} --}}
+      <h4>{{countVotes postDetails.upvotes.length postDetails.downvotes.length}}</h4>
 
- <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/downvote/thread" method="post">
+
+ <form action="/subreddit/{{postDetails.subreddit._id}}/post/{{postDetails._id}}/downvote/thread" method="post">
 <button class="btn custom-btn btn1-lp" id="go-back-btn" style="background-color:transparent">
-       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="arrow bi bi-arrow-down-short" viewBox="0 0 16 16">
+       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote postDetails.downvotes  postDetails.author._id "blue"}}" class="arrow bi bi-arrow-down-short" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
 </svg>  </button></form>
 
+           </div>
        
+     
 
 
-                  {{#if samePerson}}
-                  <div>
-                     <div class="text-center">
-                        <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/delete"
-                           method="post">
-                           <button class="btn btn-danger">Delete Post</button>
-                        </form>
+      <div class="post-list-card">
+        <div class="card-top">
+          <div >
+            <span>by:</span>
+            <a
+                       </a>
+            <a class="by-user"  href="/auth/profile/{{postDetails.author._id}}">
+              {{postDetails.author.username}}
+              <img src="{{postDetails.author.profilePicture}}" alt="image" style="width: 20px; border-radius:100%;" />
+            </a>
+          </div>
 
-                        <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/edit" method="get">
-                           <button class="btn btn-primary">Edit Post</button>
-                        </form>
-                     </div>
-                  </div>
-                  {{/if}}
+          <div>
+            
+<a href="#{{postDetails._id}}">
+            <span>Posted:</span>
+            {{publishedAgo postDetails.createdAt}}
+</a>
+          </div>
+        </div>
 
-                  <div>
-                     <br>
-                     <a href="#comment_thread">{{comments.length}} Comments.</a> <br>
-                    
+    <div>
+          <div class="card-middle">
+            <h3>{{postDetails.title}}</h3>
+            <p>{{postDetails.text}} </p>
 
-                  </div>
-                  </p>
-               </div>
-            </div>
-         </div>
+          </div>
+
+          <div class="card-bottom">
+            {{#if postDetails.img}}
+              <img src="{{postDetails.img}}" alt="image" />
+            {{/if}}
+          </div>
+
+          <div class="card-bottom">
+<div class="votes-btm">
+  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote postDetails.upvotes  postDetails.author._id "orange"}}" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
+                <path
+                  fill-rule="evenodd"
+                  d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"
+                ></path>
+    </svg>
+
+     {{postDetails.upvotes.length}}
+    
+
+
+       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote postDetails.downvotes  postDetails.author._id "blue"}}" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
+</svg> 
+    {{postDetails.downvotes.length}}
+
+       </div>
+
+          </div>
       </div>
-   </div>
-
-
-
-
-
-
-
-
+      </div>
+       </div>
+    </div>
 
    <!-- jump link to comment thread  -->
 
-   <br>
-   <h5>Comment as <a href="/auth/profile/{{userDetails._id}}">{{userDetails.username}}</a>: </h5>
 
    <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}" method="post">
-      <div class="form-group">
+      <div class="form-comment">
+
+
+
+         
          <label>
-            Leave a Comment:
+             <h5>Comment as <a href="/auth/profile/{{userDetails._id}}">{{userDetails.username}}</a>: </h5></label>
             <textarea class="form-control" name="text" cols="30" rows="4" /> </textarea>
-         </label>
+         
       </div>
       <br>
       <button type="submit" class="btn btn-primary">Post Comment</button>
@@ -113,31 +135,53 @@
 
    <ul class="list-group">
       {{#each comments}}
+   <div class="card-top">
+          <div >
+            <span>by:</span>
+            <a
+                       </a>
+            <a class="by-user"  href="/auth/profile/{{author._id}}">
+              {{author.username}}
+              <img src="{{author.profilePicture}}" alt="image" style="width: 20px; border-radius:100%;" />
+            </a>
+          </div>
 
-      <li class="list-group-item">
-         <h4>{{text}}</h4>
+          <div>
+      
+<a href="#{{_id}}">
+            <span>Posted:</span>
+            {{publishedAgo createdAt}}
+</a>
+          </div>
+        </div>
+      <li class="list-group-item" >
+         <p>{{text}}</p>
 
-         <div style="display:flex">
-            <img src="{{author.profilePicture}}" alt="image" style="width: 35px;">
-            <p>By: {{author.username}}</p>
 
-            <a href="subreddit/{{_id}}">{{name}}</a>
-
-
-
-
+         
             {{#equal author._id ../userDetails._id}}
-            <button><a href="/subreddit/comment/{{_id}}/edit">Edit</a></button>
+     <div class="sd-buttons">
+               <form action="/subreddit/comment/{{_id}}/edit" method="get">       <button class="btn btn-primary">Edit</a></button></form>
+               
                <form action="/subreddit/comment/{{_id}}/delete" method="post">
                <input type="hidden" name="sid" value="{{originalPost.subreddit}}">
                <input type="hidden" name="pid" value="{{originalPost._id}}">
-               <button>Delete</button>
+               <button class="btn btn-secondary">Delete</button>
             </form>
+            </div>
             {{/equal}}
 
-         </div>
+
 
 
          </p>
       </li>
       {{/each}}
+ 
+</section>
+
+
+   </div>
+
+
+
