--- a/views/subreddit/subreddit-details.hbs
+++ b/views/subreddit/subreddit-details.hbs
@@ -1,8 +1,7 @@
 <a href="/subreddit" class="btn btn-primary">Back to Subreddits</a>
 {{!-- show details of logedd in user --}}
 
-
- 
+<div class="subreddit-description">
 <h1 class="mb-3 text-center"> {{subredditdetails.name}}</h1>
 <img src="{{subredditdetails.img}}" alt="image" style="width: 100px; border-radius:100%;" />
 <h2>Moderator: {{subredditdetails.moderator.username}}</h2>
@@ -13,13 +12,23 @@
 </p>
 
 {{#if samePerson}}
-  <div>
-    <a href="/subreddit/{{subredditdetails._id}}/edit" class="btn btn-primary">Edit</a>
+
+
+  <div class="sd-buttons">
+    <form action="/subreddit/{{subredditdetails._id}}/edit" method="get">
+    <button class="btn btn-primary">Edit</button>
+    </form>
+
     <form action="/subreddit/{{subredditdetails._id}}/delete" method="post">
       <button class="btn btn-danger">Delete Subreddit</button>
     </form>
   </div>
 {{/if}}
+
+</div>
+ 
+
+
 
 <hr />
 {{! list all posts }}
@@ -28,18 +37,11 @@
 
 <section class="post-list">
 {{#each post}}
+
     <div class="post-list-card-wrapper">
  
       {{!-- {{{getVotes upvotes.length downvotes.length this ../userDetails.username }}}  --}}
 
-
-    
-    
-
-
-
-            
-                    
                    
                      <form action="/subreddit/{{postDetails.subreddit}}/post/{{postDetails._id}}/downvote"
                         method="post">
@@ -47,16 +49,11 @@
                      </form>
 
 
-
-
-
-
-
   <div class="card-votes">
 
  <form action="/subreddit/{{../subredditdetails._id}}/post/{{_id}}/upvote/list" method="post">
 <button type="submit" class="btn custom-btn btn1-lp" id="go-back-btn" style="background-color:transparent">
-<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="arrow bi bi-arrow-up-short" viewBox="0 0 16 16">
+<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote upvotes  author._id "orange"}}" class="arrow bi bi-arrow-up-short" viewBox="0 0 16 16">
   <path
     fill-rule="evenodd"
     d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"
@@ -69,7 +66,7 @@
 
  <form action="/subreddit/{{../subredditdetails._id}}/post/{{_id}}/downvote/list" method="post">
 <button class="btn custom-btn btn1-lp" id="go-back-btn" style="background-color:transparent">
-       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="arrow bi bi-arrow-down-short" viewBox="0 0 16 16">
+       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote downvotes  author._id "blue"}}" class="arrow bi bi-arrow-down-short" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
 </svg>  </button></form>
 
@@ -85,7 +82,7 @@
             <a
                        </a>
             <a class="by-user"  href="/auth/profile/{{author._id}}">
-              {{author.username}}
+              {{checkUserExists author}}
               <img src="{{author.profilePicture}}" alt="image" style="width: 20px; border-radius:100%;" />
             </a>
           </div>
@@ -114,7 +111,7 @@
 
           <div class="card-bottom">
 <div class="votes-btm">
-  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
+  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote upvotes  author._id "orange"}}" class="bi bi-arrow-up-short" viewBox="0 0 16 16">
                 <path
                   fill-rule="evenodd"
                   d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"
@@ -125,7 +122,7 @@
     
 
 
-       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
+       <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="{{checkVote downvotes  author._id "blue"}}" class="bi bi-arrow-down-short" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
 </svg> 
     {{downvotes.length}}
@@ -137,6 +134,7 @@
       </div>
        </div>
     </div>
+
   {{/each}}
 </section>
 {{! </div> }}
