--- a/views/subreddit/list.hbs
+++ b/views/subreddit/list.hbs
@@ -1,60 +1,75 @@
-
 <div class="view-container">
   <h1>List Of Subreddits</h1>
 
+  <form class="filter-container" action="/subreddit/filter" method="GET">
 
+    <input type="text" class="form-control" id="search" name="querry" placeholder="Search" />
 
+    <div class="filtbtn"></div>
+    <button type="submit" class="btn btn-default">Submit</button>
 
-<form class="filter-container" action="/subreddit/filter" method="GET">
-  <div class="form-group">
-    <label for="search">Search</label>
-    <input type="text" class="form-control" id="search" name="querry" placeholder="Search">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  </form>
 
-</form>
+  {{#if filteredSubreddits}}
 
+    <a href="/subreddit"><button class="btn" type="submit">Clear Filters </button></a>
 
-
-{{#if filteredSubreddits}}
-
-<a href="/subreddit"><button class="btn" type="submit">Clear Filters </button></a>
-
-<section class="subreddit-list">
+    <section class="subreddit-list">
 
       {{#each filteredSubreddits}}
-   <a href="/subreddit/{{_id}}">
-            <div class="subreddit-list-card" >
-            <h3 class="card-title"> {{name}}</h3>
-            <p class="card-text">{{description}}</p>   
-           </a>
+        <a href="subreddit/{{_id}}">
+          <div class="subreddit-list-card">
+            <div class="card-top-subreddit"><h3 class="card-title"> {{name}}</h3></div>
+            <div class="card-middle-subreddit">
+              <div call="card-middle-data">
+                <p class="card-text">{{description}}</p>
+                <p>created:{{formatDate createdAt}}
+                </p>
+
+              </div>
+
+              <div class="card-bottom"><img src={{img}} width="100px" /></div>
+
             </div>
+
+          </div>
+        </a>
       {{/each}}
 
-  </section>
-{{/if}}
+    </section>
+  {{/if}}
 
-<br />
+  <br />
 
-{{!-- {{#unless !filteredSubreddits}} --}}
-<section class="subreddit-list">
+  {{!-- {{#unless !filteredSubreddits}} --}}
+  <section class="subreddit-list">
+    {{#unless filteredSubreddits}}
 
       {{#each subreddits}}
-       <a href="subreddit/{{_id}}">
-            <div class="subreddit-list-card" >
-              <div class="card-top"><h3 class="card-title"> {{name}}</h3></div>
-              <div class="card-middle"><p class="card-text">{{description}}</p>
-              <div class="card-bottom"><img src={{image}}></div>
+        <a href="subreddit/{{_id}}">
+          <div class="subreddit-list-card">
+            <div class="card-top-subreddit"><h3 class="card-title"> {{name}}</h3></div>
+            <div class="card-middle-subreddit">
+              <div call="card-middle-data">
+                <p class="card-text">{{description}}</p>
+                <p>created:{{formatDate createdAt}}
+                </p>
+
               </div>
-            
+
+              <div class="card-bottom"><img src={{img}} width="100px" /></div>
+
             </div>
-            </a>
+
+          </div>
+        </a>
       {{/each}}
- 
+    {{/unless}}
+
   </section>
   {{!-- {{/if}} --}}
 
-<div class="text-center">
-  <a class="btn btn-primary" href="/subreddit/create">Create subreddit</a>
-</div>
+  <div class="text-center">
+    <a class="btn btn-primary" href="/subreddit/create">Create subreddit</a>
+  </div>
 </div>
