fixed bug with search bar

--- a/views/subreddit/list.hbs
+++ b/views/subreddit/list.hbs
@@ -17,7 +17,7 @@
     <section class="subreddit-list">
 
       {{#each filteredSubreddits}}
-        <a href="subreddit/{{_id}}">
+        <a href="/subreddit/{{_id}}">
           <div class="subreddit-list-card">
             <div class="card-top-subreddit"><h3 class="card-title"> {{name}}</h3></div>
             <div class="card-middle-subreddit">
