--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -59,7 +59,7 @@
 
           <div>
             
-<a href="#{{postDetails._id}}">
+{{!-- <a href="#{{postDetails._id}}"> --}}
             <span>Posted:</span>
             {{publishedAgo postDetails.createdAt}}
 </a>
